Security groups in OSP prep section

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -3,8 +3,6 @@
 
 Prepare the OpenStack Platform environment for migration:
 
-. TBD: Specific recommendations for OpenStack Platform deployment
-// To do
 . Ensure that the storage backends have sufficient space for the virtual machines you are migrating.
 
 . Set the BIOS settings of the physical hosts for optimal performance, rather than power-saving, according to the vendor's recommendations and disable the C1E halt state, if applicable.
@@ -13,6 +11,8 @@ Prepare the OpenStack Platform environment for migration:
 
 . Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider network] for the target instances, to ensure that the IP addresses of the source virtual machines are preserved.
 
+//. Create projects for the conversion host and a migration destination.
+// To do: Needs clarification from Nenad
 . Configure the security groups:
 * A security group for the conversion hosts and CloudForms must have port 22 (SSH) enabled.
 * A security group for CloudForms must have port 443 (HTTPS) enabled.
