--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -1,7 +1,7 @@
 [id="Preparing_the_rhv_target_environment"]
 = Preparing the Red Hat Virtualization environment
 
-Prepare the Red Hat Virtualization environment for migration:
+To prepare the Red Hat Virtualization environment for migration:
 
 . Ensure that the datastore has sufficient space for the virtual machines you are migrating.
 
@@ -11,7 +11,7 @@ Prepare the Red Hat Virtualization environment for migration:
 
 . Install   link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Red Hat Virtualization Hosts] 4.2.4 or later or  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Red_Hat_Enterprise_Linux_Hosts[Red Hat Enterprise Linux hosts] 7.5 or later.
 
-. Enable the following https://access.redhat.com/articles/417343[ports] in the RHV conversion host's network:
+. Enable the following https://access.redhat.com/articles/417343[ports] in the conversion host network:
 * 22 - SSH
 * 443 - CloudForms, Red Hat Virtualization Manager, and VDDK
 * 902 - CloudForms to VMware
