updated OSP projects line

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -11,7 +11,7 @@ To prepare the OpenStack Platform environment for migration:
 
 . Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider network] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
 
-. Create a project for the conversion hosts and as many projects as you need for migration destinations.
+. Create a project for the conversion hosts and whatever projects you require for the target instances.
 
 . Configure security groups:
 * A security group for the conversion hosts and CloudForms must have port 22 (SSH) enabled.
